# newsletter-summarizer

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  package_lambda.sh  pyproject.toml
sample-data/: create-bucket.sh  init-ses.sh
sample-data/emails/: sample
sample-data/events/: sample.json
src/: main.py
src/newsletter_summarizer/: __init__.py  __main__.py  crawling.py  extraction.py  processing.py  s3.py  submission.py  summary.py
